# Coffer

./: .gitignore  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  alembic.ini  pyproject.toml  spec.md
.claude/skills/fastapi-clean/: SKILL.md
.claude/skills/pdfplumber-extract/: SKILL.md
.claude/skills/pikepdf-decrypt/: SKILL.md
.claude/skills/sqlalchemy-2x/: SKILL.md
.github/workflows/: ci.yml
coffer/api/: adapters.py  app.py  dashboard.py  dashboard_routes.py  dashboard_schemas.py  dependencies.py  ops.py  parsing.py  routes.py  schemas.py  seed_credential.py  static.py  telegram_adapters.py  telegram_routes.py  transactions.py  transactions_routes.py  transactions_schemas.py
coffer/domain/: entities.py  enums.py  networth.py  read_models.py  repositories.py
coffer/ingestion/: categorize.py  decrypt.py  dedup.py  detect.py  pipeline.py  recategorize.py  recompute.py  telegram.py  validate.py
coffer/parsers/: _bca_rekening_koran.py  ajaib_portfolio.py  bca_kartu_kredit.py  bca_tahapan.py  bca_tapres.py  cimb_kartu_kredit.py  statement_types.py  stockbit_soa.py
coffer/persistence/: config.py  crypto.py  db.py  mappers.py  models.py  repositories.py
design_handoff_coffer_dashboard/: Household Finance.dc.html  MEASUREMENTS.md  README.md  coffer-dashboard-standalone.html
docs/: OPERATIONS.md
migrations/: env.py
migrations/versions/: 1764a988dedb_s4_spec_section_2_persistence_model.py  741f49a1c0c3_s7_statement_closing_balance_for_net_.py  79a1b0e9dc7c_s16_statement_due_date_minimum_payment_.py
scripts/: backup.sh  dev.sh  restore-verify.sh
tests/: conftest.py  test_ajaib_portfolio.py  test_api_adapters.py  test_api_arus_kas.py  test_api_belanja.py  test_api_ingestion.py  test_api_portofolio.py  test_api_ringkasan.py  test_api_tagihan.py  test_arus_kas.py  test_arus_kas_integration.py  test_bca_kartu_kredit.py  test_bca_tahapan.py  test_bca_tapres.py  test_belanja.py  test_belanja_integration.py  test_categorize.py  test_cimb_kartu_kredit.py  test_decrypt.py  test_dedup.py  test_detect.py  test_migrations.py  test_ops.py  test_persistence_repos.py  test_pipeline.py  test_pipeline_integration.py  test_portofolio.py  test_portofolio_integration.py  test_read_models.py  test_recategorize.py  test_recompute.py  test_recompute_integration.py  test_ringkasan.py  test_ringkasan_integration.py  test_seed_credential.py  test_static.py  test_stockbit_soa.py  test_tagihan.py  test_tagihan_integration.py  test_telegram.py  (+3 more)
tests/fixtures/: ajaib_portfolio_2026-06-30.txt  bca_kartu_kredit_2026-06.txt  bca_tahapan_2026-06.txt  bca_tapres_2026-05.txt  bca_tapres_empty_2026-06.txt  cimb_mc_gold_2026-03.txt  stockbit_soa_2026-06.txt
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx  nav.ts  vitest.setup.ts
web/src/api/: client.ts  types.ts
web/src/components/: BottomNav.tsx  CashFlowChart.tsx  Header.tsx  HeroCard.tsx  KpiRow.tsx  RincianAkun.tsx  Status.tsx  Tagihan.tsx  TideChart.tsx
web/src/lib/: bill.test.ts  bill.ts  cashflow.test.ts  cashflow.ts  chart.test.ts  chart.ts  format.test.ts  format.ts  spend.test.ts  spend.ts  useApi.ts  useRingkasan.ts
web/src/views/: ArusKas.tsx  Belanja.tsx  Placeholder.tsx  Portofolio.tsx  Ringkasan.tsx
