[project]
name = "coffer"
version = "0.0.0"
description = "Private, self-hosted household finance consolidator (Indonesian statements)."
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "pikepdf>=9",
    "psycopg[binary]>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coffer"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
    "alembic>=1.13",
]

# ── Lint / format ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
# Alembic-managed tooling (generated migrations + env). Not part of the package;
# excluded from mypy (not in `files`) and from the layer contract too.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom puts Depends()/File()/Form()/Header() in
# argument defaults; B008 (no function calls in defaults) does not apply to it.
"coffer/api/routes.py" = ["B008"]
"coffer/api/telegram_routes.py" = ["B008"]

# ── Types (strict, per CLAUDE.md Definition of done) ────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
files = ["coffer", "tests"]

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "pikepdf.*"]
ignore_missing_imports = true

# ── Tests ───────────────────────────────────────────────────────────────────--
[tool.pytest.ini_options]
testpaths = ["tests"]

# ── Layer contract: dependencies point inward (CLAUDE.md Architecture) ──────────
# Higher layers may import lower ones; a lower layer importing a higher one fails.
# Outer → inner:  web → api → ingestion → persistence → parsers → domain.
[tool.importlinter]
root_package = "coffer"

[[tool.importlinter.contracts]]
name = "Clean Architecture: dependencies point inward"
type = "layers"
layers = [
    "coffer.web",
    "coffer.api",
    "coffer.ingestion",
    "coffer.persistence",
    "coffer.parsers",
    "coffer.domain",
]
